reference-llvm/tests/should-fail/fail25.mu
// needs @handler

function @entry foo() {
    scope (always) bar;
}

function bar() {
    ;
}
